objects/maps__AdvRouteContinuousTravel__c.object
<CustomObject>
    <description>This holds the possible start and stop locations for users</description>
    <fields>
        <fullName>maps__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AdvRouteSettings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Advanced Route settings</description>
        <label>Maps Advanced Route Settings</label>
        <referenceTo>maps__AdvRouteSettings__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Continuous Travel</relationshipLabel>
        <relationshipName>AdvRouteContinuousTravels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ConvertedToShift__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is used to let us know not to create shifts off of this record when the batch runs</description>
        <label>Converted To Shift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be considered the users home base</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EndAddress__c</fullName>
        <label>End Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndCity__c</fullName>
        <label>End City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndCountry__c</fullName>
        <label>End Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndDate__c</fullName>
        <description>This is the date that the continuous travel should stop being used</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__EndLatLong__c</fullName>
        <description>This holds the ending latitude and longitude of the continuous travel</description>
        <label>End Lat/Long</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__EndLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EndName__c</fullName>
        <label>End Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndPostalCode__c</fullName>
        <label>End Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndStateProvince__c</fullName>
        <label>End State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndStreet__c</fullName>
        <label>End Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__IsContinuous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to flag the record as continuous travel</description>
        <label>Continuous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__IsTravel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to flag the record as travel</description>
        <label>Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LatLong__c</fullName>
        <description>This holds the latitude and longitude of the continuous travel</description>
        <label>Lat/Long</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__StartDate__c</fullName>
        <description>This is the date that the continuous travel should start being used</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__StartLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__StartName__c</fullName>
        <label>Start Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__StateProvince__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <description>This is the type of continuous travel</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup field</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdvRouteContinuousTravels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Advanced Route Continuous Travel</label>
    <nameField>
        <label>Maps Planner Continuous Travel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Continuous Travels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>